# =============================================================================
# @file    setup.cfg
# @brief   Package metadata and PyPI configuration
# @author  Michael Hucka <mhucka@caltech.edu>
# @license Please see the file named LICENSE in the project directory
# @website https://github.com/mhucka/ask-devonthink
# =============================================================================

[metadata]
name          = ask-devonthink
version       = 0.0.1
description   = Ask DEVONthink for metadata attribute values of selected items
author        = Michael Hucka
author_email  = mhucka@caltech.edu
license       = BSD 3-clause
license_files = LICENSE
url           = https://github.com/mhucka/ask-devonthink
# The remaining items below are used by PyPI.
project_urls  =
  Source Code = https://github.com/mhucka/ask-devonthink
  Bug Tracker = https://github.com/mhucka/ask-devonthink/issues
keywords      = Python, utilities
classifiers   =
  Development Status :: 3 - Alpha
  License :: OSI Approved :: BSD License
  Intended Audience :: Science/Research
  Operating System :: MacOS :: MacOS X
  Programming Language :: Python :: 3.6
long_description = file:README.md
long_description_content_type = text/markdown

[options]
packages = find:
scripts  = bin/ask-devonthink
zip_safe = False
python_requires = >= 3.6

[options.entry_points]
console_scripts = 
  ask-devonthink = ask-devonthink.__main__:console_scripts_main
